# oxitortoise

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  build.rs  debug_ants.sh  out.rs  rust-toolchain.toml
ast_to_hir/: Cargo.toml
ast_to_hir/src/: ast.rs  cheats.rs  global_scope.rs  lib.rs
ast_to_mir/: Cargo.toml
ast_to_mir/src/: ast.rs  cheats.rs  lib.rs
bench/: build.sh  compile_rs_to_wasm.py  convert_ast.sh  emscripten.sh  galapagos.sh  index.html  oxitortoise_runner.html  oxitortoise_runner.js  oxitortoise_runner_visualizer.html  run.sh  server.sh  tortoise-compiler.js  tortoise-engine.js  tortoise_runner.html  tortoise_runner.js  visualizer_only.html  wasm_runner.html  wasm_runner.js  wasm_runner_visualizer.html
bench/headless/: index.js  package-lock.json  package.json
engine/: Cargo.toml
engine/src/: exec.rs  hir.rs  lib.rs  mir.rs  updater.rs  util.rs  workspace.rs
engine/src/exec/: helpers.rs  jit.rs
engine/src/hir/: build_lir.rs  build_mir.rs  expr.rs  format.rs  transform.rs  transforms.rs  ty.rs  type_inference.rs
engine/src/hir/build_mir/: type_mapping.rs
engine/src/hir/expr/: agent_var.rs  agentset.rs  arith_op.rs  ask.rs  clear.rs  closure.rs  color.rs  constant.rs  control_flow.rs  create_agent.rs  diffuse.rs  distancexy.rs  list_set_ops.rs  local_var.rs  rand.rs  set_default_shape.rs  ticks.rs  topology.rs  turtle_movement.rs  user_fn.rs
engine/src/hir/node/: agent_var.rs  agentset.rs  arith_op.rs  ask.rs  check_nobody.rs  clear.rs  closure.rs  color.rs  constant.rs  control_flow.rs  create_agent.rs  diffuse.rs  distancexy.rs  list_set_ops.rs  local_var.rs  low_level_mem.rs  rand.rs  set_default_shape.rs  ticks.rs  topology.rs  turtle_movement.rs  user_fn.rs
engine/src/mir/: build_lir.rs  builder.rs  format.rs  from_hir.rs  graphviz.rs  lowering.rs  node.rs  reflection.rs  to_lir.rs  transforms.rs  type_inference.rs
engine/src/mir/builder/: init_tracker.rs
engine/src/mir/node/: agent_var.rs  agentset.rs  arith_op.rs  ask.rs  check_nobody.rs  clear.rs  closure.rs  color.rs  constant.rs  control_flow.rs  create_agent.rs  diffuse.rs  distancexy.rs  library.rs  list_set_ops.rs  local_var.rs  low_level_mem.rs  of.rs  rand.rs  set_default_shape.rs  ticks.rs  topology.rs  turtle_movement.rs  user_fn.rs
engine/src/sim/: agent_schema.rs  color.rs  observer.rs  patch.rs  shapes.rs  tick.rs  topology.rs  turtle.rs  value.rs  world.rs
engine/src/sim/topology/: diffuse.rs  heading.rs
engine/src/sim/value/: agentset.rs  any.rs  boolean.rs  box.rs  dynbox.rs  float.rs  list.rs  nobody.rs  string.rs  type.rs
engine/src/sim/value/any/: boxed.rs  packed.rs  unpacked.rs
engine/src/util/: cell.rs  gen_slot_tracker.rs  lifetime_ptr.rs  rc.rs  reflection.rs  rng.rs  row_buffer.rs  shuffle_iterator.rs  type_registry.rs
engine/src/util/rng/: mersenne_twister.rs
ffi_translate/ffi_translate/: Cargo.toml
ffi_translate/ffi_translate_impl/: Cargo.toml
ffi_translate/ffi_translate_macro/: Cargo.toml
float_bench/: Cargo.toml
float_bench/src/: main.rs
lir/: Cargo.toml
lir/src/: lib.rs  lir.rs  reexports.rs  stackify.rs  stackify_lir.rs  wasm.rs
lir_interp/: Cargo.toml
lir_interp/src/: lib.rs
lir_to_cranelift/: Cargo.toml
lir_to_cranelift/src/: lib.rs
lir_to_wasm/: Cargo.toml  test.wasm
lir_to_wasm/src/: codegen.rs  codegen_old.rs  lib.rs  stackify_generic.rs  stackify_lir.rs
macro_mir_dsl/macro_mir_dsl/: Cargo.toml
macro_mir_dsl/macro_mir_dsl_impl/: Cargo.toml
macro_reflect/: output.rs
macro_reflect/macro_reflect/: Cargo.toml
macro_reflect/macro_reflect_impl/: Cargo.toml
main/: Cargo.toml
main/src/: export_interface.rs  install_lir.rs  install_mir.rs  lib.rs
main/src/install_lir/: cranelift.rs  wasm.rs
oxitortoise_engine/: Cargo.toml
oxitortoise_engine/src/: exec.rs  lib.rs
oxitortoise_engine/src/exec/: dynamic_link.rs  jit.rs
oxitortoise_engine/src/exec/jit/: wasm.rs
oxitortoise_engine/src/sim/: agent_schema.rs  patch.rs  shapes.rs  topology.rs  value.rs  world.rs
oxitortoise_engine/src/sim/topology/: heading.rs
oxitortoise_engine/src/sim/value/: agentset.rs
oxitortoise_engine/src/util/: cell.rs  gen_slot_tracker.rs  row_buffer.rs
pretty_print/: Cargo.toml
pretty_print/src/: lib.rs
reflection/: Cargo.toml
reflection/src/: dyn_ptr.rs  dyn_type.rs  lib.rs  mir.rs  static_type.rs
reflection/src/mir/: analysis.rs  build_lir.rs  builder.rs  format.rs
src/: agent.rs  agent_id.rs  agent_variables.rs  color.rs  exec.rs  execution.rs  lib.rs  observer.rs  patch.rs  primitive.rs  procedure.rs  procedure_prims.rs  rng.rs  scripting.rs  shuffle_iterator.rs  sim.rs  tick.rs  topology.rs  turtle.rs  turtle_manager.rs  turtle_set.rs  unsafe_getter.rs  updater.rs  util.rs  value.rs  workspace.rs  world.rs
src/exec/: dynamic_link.rs  interp.rs  jit.rs  scripting.rs
src/execution/: manager.rs  monolithic.rs  pieces.rs  polylithic.rs  procedure.rs  statements.rs  vm.rs
src/primitive/: ask.rs  clear.rs  create_agent.rs  topology.rs  world.rs
src/scripting/: agent_lookup.rs  ask.rs  clear.rs  create_agent.rs  math.rs  observer.rs  ticks.rs  topology.rs  turtle.rs  (+1 more)
(+85 files in other folders)
