[workspace]
resolver = "3"
members = [
    "lir",
    "main",
    "engine",
    "lir_to_wasm",
    "lir_to_cranelift",
    "ast_to_hir",
    "pretty_print",
    "macro_mir_dsl/macro_mir_dsl_impl",
    "macro_mir_dsl/macro_mir_dsl",
]

[workspace.dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
slotmap = "1.0.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.dev]
opt-level = 0
debug = "full"
