[workspace]
resolver = "3"
members = [
    "lir",
    "main",
    "engine",
    "lir_to_wasm",
    "lir_to_cranelift",
    "reflection",
    "ast_to_hir",
    "pretty_print",
    "ffi_translate/ffi_translate_impl",
    "ffi_translate/ffi_translate_macro",
    "macro_reflect/macro_reflect",
    "macro_reflect/macro_reflect_impl",
]

[workspace.dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
slotmap = "1.0.7"
smallvec = "1.15.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
bytemuck = { version = "1.25.0", features = ["derive"] }
either = "1.15.0"

[profile.dev]
opt-level = 0
debug = "full"
