[package]
name = "oxitortoise_ast_to_hir"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.143"
serde = { version = "1.0", features = ["derive", "rc"] }
engine = { path = "../engine", package = "oxitortoise_engine" }
anyhow = "1.0.99"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
