[package]
name = "oxitortoise_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
either = "1.15.0"
flagset = "0.4.6"
slotmap = "1.0.7"
lir = { path = "../lir", package = "oxitortoise_lir" }
tracing = "0.1.41"
ambassador = "0.4.2"
pretty_print = { path = "../pretty_print" }
ffi_translate = { path = "../ffi_translate/ffi_translate" }

[features]
runtime-unsafety = []
