[package]
name = "oxitortoise_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { workspace = true }
either = "1.15.0"
flagset = "0.4.6"
slotmap = { workspace = true }
lir = { path = "../lir", package = "oxitortoise_lir" }
tracing = { workspace = true }
ambassador = "0.4.2"
pretty_print = { path = "../pretty_print" }
ffi_translate = { path = "../ffi_translate/ffi_translate" }
macro_reflect = { path = "../macro_reflect/macro_reflect" }

[features]
runtime-unsafety = []
