[package]
name = "oxitortoise_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
flagset = "0.4.6"
slotmap = { workspace = true }
smallvec = { workspace = true }
reflection = { path = "../reflection", package = "oxitortoise_reflection" }
tracing = { workspace = true }
ambassador = "0.4.2"
pretty_print = { path = "../pretty_print" }
ffi_translate = { path = "../ffi_translate/ffi_translate" }
macro_reflect = { path = "../macro_reflect/macro_reflect" }

[features]
runtime-unsafety = []
