[package]
name = "oxitortoise_main"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine", package = "oxitortoise_engine" }
lir_to_wasm = { path = "../lir_to_wasm", package = "oxitortoise_lir_to_wasm" }
ast_to_hir = { path = "../ast_to_hir", package = "oxitortoise_ast_to_hir" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
lir_to_wasm = { path = "../lir_to_wasm", package = "oxitortoise_lir_to_wasm" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lir_to_cranelift = { path = "../lir_to_cranelift", package = "oxitortoise_lir_to_cranelift" }
cranelift-jit = "0.129.0"
cranelift-native = "0.129.0"

[[bin]]
name = "ants"
path = "../bench/models/ants/run.rs"
