[package]
name = "oxitortoise"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
either = "1.15.0"
flagset = "0.4.6"
slotmap = "1.0.7"
lir = { path = "../lir" }

[features]
runtime-unsafety = []

[profile.dev]
opt-level = 0
debug = "full"

[[bin]]
name = "basic_test"
