[package]
name = "oxitortoise_reflection"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { workspace = true }
lir = { path = "../lir", package = "oxitortoise_lir" }
tracing = { workspace = true }
pretty_print = { path = "../pretty_print" }
macro_reflect = { path = "../macro_reflect/macro_reflect" }
bytemuck = { workspace = true }
smallvec = { workspace = true }
